Define HTTP adapter's DTOs
