# swagger/bankless-java.yaml
@@ -28,7 +28,7 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/ResponseDto"
+            $ref: "#/definitions/BaseResponse"
           examples:
             application/json:
               {
@@ -55,7 +55,7 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/ResponseDto"
+            $ref: "#/definitions/BaseResponse"
           examples:
             application/json:
               {
@@ -88,7 +88,7 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/AccountResponseDto"
+            $ref: "#/definitions/AccountResponse"
           examples:
             application/json:
               {
